Criando template de Cirurgia

--- a/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
+++ b/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
@@ -177,6 +177,9 @@
                         [precricaoEnfermagem]="precricaoEnfermagem"
                     ></app-prescricao-enfermagem>
                 </p-accordionTab>
+                <p-accordionTab header="Cirurgia">
+                    <app-cirurgia [cirurgia]="cirurgia"></app-cirurgia>
+                </p-accordionTab>
             </p-accordion>
         </form>
     </div>
