Criação de serviços

--- a/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
+++ b/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
@@ -100,6 +100,8 @@
                                     <span class="ui-float-label">
                                         <p-dropdown
                                             formControlName="tipoUnidadeId"
+                                            [options]="tipos"
+                                            optionLabel="nome"
                                             pTooltip="Selecione um tipo de unidade funcional."
                                         ></p-dropdown>
                                         <label>Tipo de unidade</label>
