Ajustando template e criando serviços

--- a/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
+++ b/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
@@ -68,8 +68,8 @@
                                             pTooltip="Selecione a ala da unidade funcional."
                                             [options]="alas"
                                             optionLabel="nome"
+                                            placeholder="Ala"
                                         ></p-dropdown>
-                                        <label>Ala</label>
                                     </span>
                                 </div>
                             </div>
@@ -80,9 +80,9 @@
                                             formControlName="clinica"
                                             [options]="clinicas"
                                             optionLabel="nome"
+                                            placeholder="Clínica"
                                             pTooltip="Selecione a clinica refente a esta especialidade."
                                         ></p-dropdown>
-                                        <label>Clínica</label>
                                     </span>
                                 </div>
                                 <div class="ui-g-3 ui-sm-12">
@@ -102,9 +102,9 @@
                                             formControlName="tipoUnidadeId"
                                             [options]="tipos"
                                             optionLabel="nome"
+                                            placeholder="Tipos de Unidades"
                                             pTooltip="Selecione um tipo de unidade funcional."
                                         ></p-dropdown>
-                                        <label>Tipo de unidade</label>
                                     </span>
                                 </div>
                             </div>
