--- a/frontend/src/app/consulta/components/listar-consultas/listar-consultas.component.html
+++ b/frontend/src/app/consulta/components/listar-consultas/listar-consultas.component.html
@@ -151,6 +151,7 @@
                 [disableView]="true"
                 [disableEdit]="true"
                 [disableDelete]="true"
+                [verticalButtons]="false"
             >
                 <p-column field="historico" header="Hist"></p-column>
                 <p-column field="consultas" header="Consultas"></p-column>
