Removendo botão prescrições e adicionando tooltip em pesquisar - BASIS-131379

--- a/frontend/src/app/prescricao-medica/prescricao-medica.component.html
+++ b/frontend/src/app/prescricao-medica/prescricao-medica.component.html
@@ -5,7 +5,7 @@
             <div class="ui-g">
                 <div class="ui-g-12 ui-md-12 ui-fluid">
                     <span class="md-inputfield">
-                        <input type="text" pInputText class="ui-inputtext" name="nome" [(ngModel)]="nome" #parametro />
+                        <input type="text" pInputText class="ui-inputtext" name="nome" pTooltip="Pesquisar Paciente por nome" [(ngModel)]="nome" #parametro />
                         <label>Nome paciente</label>
                     </span>
                 </div>
@@ -37,20 +37,12 @@
                         class="ui-button-info">
                     </basis-datatable-button>
 
-                    <basis-datatable-button icon="assignment" name="listar-prescricoes"
-                        [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Prescrever Medicamento"
-                        class="ui-button-info">
+                    <basis-datatable-button icon="remove-red-eye" name="listar-prescricoes"
+                        [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Listar Prescrições"
+                        class="ui-button-success">
                     </basis-datatable-button>
 
                 </basis-datatable>
-
-                <div class="ui-g-12 ui-md-6">
-                    <div class="ui-g-12 ui-md-6">
-                        <button [disabled]="(datatable.selectedRow) ? false : true" pButton type="submit" name="listar-prescricoes"
-                            label="Prescrições" icon="ui-icon-add-to-queue"
-                            pTooltip="Listar Prescrições do paciente"></button>
-                    </div>
-                </div>
 
             </div>
         </div>
