Cirando serviços para outros compnentes de outros módulos

--- a/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
+++ b/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
@@ -116,6 +116,7 @@
                                         <p-dropdown
                                             formControlName="idCentroDeAtividade"
                                             pTooltip="Digite a sigla da unidade funcional."
+                                            [options]="centros"
                                         ></p-dropdown>
                                         <label>Centro de Atividade</label>
                                     </span>
