--- a/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
+++ b/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
@@ -296,7 +296,7 @@
                     </div>
                 </p-accordionTab>
             </p-accordion>
-            <button pButton type="submit" label="Cadastrar"></button>
+            <button pButton type="submit" [disabled]="!valid()" label="Cadastrar"></button>
         </form>
     </div>
 </div>
